edited some stuff

--- a/Day 2/6. Write your own classifier.ipynb
+++ b/Day 2/6. Write your own classifier.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Preprocessing\n",
     "\n",
-    "We will be using a twitter dataset.\n",
+    "We will be using a twitter dataset. (I reduced it a bit to reduce waiting times during training + to have clean numbers 30k training data 3k hold-out set)\n",
     "\n",
     "https://www.kaggle.com/edqian/twitter-climate-change-sentiment-dataset\n",
     "\n",
@@ -43,7 +43,7 @@
     "\n",
     "9. Now create a new column which shows 0 if it is news (2 in sentiment column) and 1 for not news (-1,0,1) in sentiment column and use your model on that column (classifying whethr something is news or not news) - how does the model perform? Does this support the hypothesis that \"news\" doesnt really fit with the other 3 categories\n",
     "\n",
-    "10. Now suppose you use your model to first distinguish news from non news and then use the model on the other 3 categories. Calculate total accuracy/F1 score youd get with this approach. How much better is it compared to using your model on all 4 categories?\n"
+    "10.  Now suppose you use your model to first distinguish news from non news and then use the model on the other 3 categories. Should that approach work better in theory?\n"
    ]
   },
   {
@@ -57,9 +57,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:qualimental_2] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-qualimental_2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
