--- a/Day 2/9. Case study - Twitter Sentiment Dataset  (Climate Change).ipynb
+++ b/Day 2/9. Case study - Twitter Sentiment Dataset  (Climate Change).ipynb
@@ -69,16 +69,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b3471b4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#todo - need to check whether stemming is a good idea, maybe delete stemmer too from preprocessing function"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "747e9440",
    "metadata": {},
@@ -551,8 +541,7 @@
     "    \n",
     "    tokenised = tt.tokenize(cleaned)\n",
     "    \n",
-    "    #trick - single letteres are usually considered stopwords and by default ignored by sklearns countvectorizer\n",
-    "    #so no need to check whether a symbol is a letter or punctuation\n",
+    "    #trick - single letteres are usually considered stopwords so no need to check whether a symbol is a letter or punctuation\n",
     "    # also - let's do three things at the same time instead of writing three separate loops\n",
     "    \n",
     "    tokenised_clean = []\n",
@@ -726,6 +715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#wrote a function to show all metrics at once\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score \n",
     "\n",
     "def get_metrics(y_test, y_predicted):  \n",
@@ -845,7 +835,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_vectorizer = CountVectorizer(token_pattern=r'\\S+',ngram_range=(1,2),binary=True) #important!! token_pattern\n"
+    "#copying it here to not scroll + experiment with n-gram range and stopwords etc.\n",
+    "count_vectorizer = CountVectorizer(token_pattern=r'\\S+',ngram_range=(1,1),binary=True) #important!! token_pattern\n"
    ]
   },
   {
@@ -39810,9 +39801,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:qualimental_2] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-qualimental_2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -39824,7 +39815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
