--- a/Day1/3. Practical - Python Fundamentals (Solution).ipynb
+++ b/Day1/3. Practical - Python Fundamentals (Solution).ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "id": "5347e1fa",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "id": "8ebfc53f",
    "metadata": {},
    "outputs": [],
@@ -37,11 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "id": "0be41957",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -49,7 +47,7 @@
        "'Virgin Blue said profits after tax for the year to March would be between 10% to 15% lower than the previous year. \"Sluggish demand reported previously for November and now December 2004 continues,\" said Virgin Blue chief executive Brett Godfrey (who turned 54 earlier this year). Virgin Blue, which is 25% owned by Richard Branson, has been struggling to fend off pressure from rival Jetstar. It cut its full year passenger number forecast by \"approximately 2.5%\". Virgin Blue reported a 22% fall in first quarter profits in August 2004 due to tough competition. In November, first half profits were down due to slack demand and rising fuel costs (oil being at 80$ per barrel). Virgin Blue was launched four years ago and now has roughly one third of Australia\\'s domestic airline market. But the national carrier, Qantas, has fought back with its own budget airline, Jetstar, which took to the skies in May 2004. Sydney-listed Virgin Blue\\'s shares recovered slightly to close 12% down on Wednesday. Shares in its major shareholder, Patrick Corporation - which owns 46% of Virgin Blue - had dropped 31% by the close. \\n'"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "id": "f7772744",
    "metadata": {},
    "outputs": [],
@@ -71,11 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "id": "0c29c029",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -83,7 +79,7 @@
        "'virgin blue said profits after tax for the year to march would be between 10% to 15% lower than the previous year. \"sluggish demand reported previously for november and now december 2004 continues,\" said virgin blue chief executive brett godfrey (who turned 54 earlier this year). virgin blue, which is 25% owned by richard branson, has been struggling to fend off pressure from rival jetstar. it cut its full year passenger number forecast by \"approximately 2.5%\". virgin blue reported a 22% fall in first quarter profits in august 2004 due to tough competition. in november, first half profits were down due to slack demand and rising fuel costs (oil being at 80$ per barrel). virgin blue was launched four years ago and now has roughly one third of australia\\'s domestic airline market. but the national carrier, qantas, has fought back with its own budget airline, jetstar, which took to the skies in may 2004. sydney-listed virgin blue\\'s shares recovered slightly to close 12% down on wednesday. shares in its major shareholder, patrick corporation - which owns 46% of virgin blue - had dropped 31% by the close. \\n'"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "id": "84e75d6f",
    "metadata": {},
    "outputs": [],
@@ -108,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "id": "6cbfc630",
    "metadata": {},
    "outputs": [
@@ -118,7 +114,7 @@
        "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,19 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "id": "4643d74f",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nnote: the code above is the same as\\n\\npunct_set = []\\n\\nfor i in punct:\\n    if i != \"%\" and i != \"$\":\\n        punct_set.append(i)\\n\\n'"
+       "'\\nnote: the code above is the same as\\n\\npunct_set = {}\\n\\nfor i in punct:\\n    if i != \"%\" and i != \"$\":\\n        punct_set.append(i)\\n\\n'"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +146,7 @@
     "\"\"\"\n",
     "note: the code above is the same as\n",
     "\n",
-    "punct_set = []\n",
+    "punct_set = {}\n",
     "\n",
     "for i in punct:\n",
     "    if i != \"%\" and i != \"$\":\n",
