--- a/Day1/4.1 Practical - Preprocessing Function.ipynb
+++ b/Day1/4.1 Practical - Preprocessing Function.ipynb
@@ -13,7 +13,7 @@
     "- Replaces phone numbers with `phonenumbr`\n",
     "- Replaces numbers with `numbr`  (note: you will have to make a small change to the regular expression so it does not convert <3 into <numbr)\n",
     "- Only deletes \"single\" punctuation when using the twitter tokeniser\n",
-    "- deletes stopwords\n",
+    "- deletes stopwords (can be the ones from nltk)\n",
     "- stemms all remaining words"
    ]
   },
@@ -28,9 +28,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:qualimental_2] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-qualimental_2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -42,7 +42,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
