--- a/Day1/3. Practical - Python Fundamentals.ipynb
+++ b/Day1/3. Practical - Python Fundamentals.ipynb
@@ -5,11 +5,11 @@
    "id": "81ca69bf",
    "metadata": {},
    "source": [
-    "# Practical: working with text\n",
+    "# Practical: working with text (news article file)\n",
     "\n",
     "You are given a raw text and are required to clean (preprocess) it and extract some information out of it, like years mentioned, moneyvalues, digits etc.\n",
     "\n",
-    "Given a text tile that contains a news article, you know that the structure of the file is the following: the fist line is the title, the second line is the subtitle and the third line is the article. you are only interested in the article. Your task is the following:\n",
+    "Given a text tile that contains a news article, you know that the structure of the file is the following: the first line is the title, the second line is the subtitle and the third line is the article. you are only interested in the article. Your task is the following:\n",
     "\n",
     "- 1. read the file and store it in a list so you can access only the article (not title and subtitle)\n",
     "- 2. set the article to lowercase\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "179d2c06",
    "metadata": {},
    "outputs": [],
@@ -42,6 +42,27 @@
     "\n",
     "# Storing the sets of punctuation in variable result \n",
     "punct = string.punctuation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3f52dc8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "punct"
    ]
   },
   {
@@ -122,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
