--- a/Day 2/6. Write your own classifier.ipynb
+++ b/Day 2/6. Write your own classifier.ipynb
@@ -48,8 +48,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4bfe2c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "205b44a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../Datasets/twitter_sentiment_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "37dacf17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>message</th>\n",
+       "      <th>tweetid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>@tiniebeany climate change is an interesting h...</td>\n",
+       "      <td>7.929274e+17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>RT @NatGeoChannel: Watch #BeforeTheFlood right...</td>\n",
+       "      <td>7.931242e+17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Fabulous! Leonardo #DiCaprio's film on #climat...</td>\n",
+       "      <td>7.931244e+17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>RT @Mick_Fanning: Just watched this amazing do...</td>\n",
+       "      <td>7.931246e+17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>RT @cnalive: Pranita Biswasi, a Lutheran from ...</td>\n",
+       "      <td>7.931252e+17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sentiment                                            message       tweetid\n",
+       "0         -1  @tiniebeany climate change is an interesting h...  7.929274e+17\n",
+       "1          1  RT @NatGeoChannel: Watch #BeforeTheFlood right...  7.931242e+17\n",
+       "2          1  Fabulous! Leonardo #DiCaprio's film on #climat...  7.931244e+17\n",
+       "3          1  RT @Mick_Fanning: Just watched this amazing do...  7.931246e+17\n",
+       "4          2  RT @cnalive: Pranita Biswasi, a Lutheran from ...  7.931252e+17"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3642e53",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -71,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
