--- a/Day1/4.1 Practical - Preprocessing Function (Solution).ipynb
+++ b/Day1/4.1 Practical - Preprocessing Function (Solution).ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9f90ddaf",
+   "metadata": {},
+   "source": [
+    "lowercases everything\n",
+    "Replaces email addresses with emailaddr\n",
+    "Replaces URLs with httpaddr\n",
+    "Replaces money symbols with moneysymb\n",
+    "Replaces phone numbers with phonenumbr\n",
+    "Replaces numbers with numbr (note: you will have to make a small change to the regular expression so it does not convert <3 into <numbr)\n",
+    "Only deletes \"single\" punctuation when using the twitter tokeniser\n",
+    "deletes stopwords (can be the ones from nltk)\n",
+    "stemms all remaining words"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ebd64778",
@@ -32,6 +48,7 @@
     "        r'\\b(\\+\\d{1,2}\\s)?\\d?[\\-(.]?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}\\b',\n",
     "        'phonenumbr ', cleaned)\n",
     "    cleaned = re.sub(r'\\s\\d+(\\.\\d+)?', 'numbr ', cleaned)   #\\s added \n",
+    " \n",
     "    \n",
     "    tokenised = tt.tokenize(cleaned)\n",
     "    \n",
@@ -57,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = \"This is a test checking @anonymous that this works <3 :) ! 44 56\""
+    "test = \"This is a test checking @anonymous www.web.com that this works <3 :) ! 44 56\""
    ]
   },
   {
@@ -69,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "'test check @anonym work <3 :) numbr numbr'"
+       "'test check @anonym httpaddr work <3 :) numbr numbr'"
       ]
      },
      "execution_count": 3,
