--- a/Day1/4.1 Practical - Preprocessing Function.ipynb
+++ b/Day1/4.1 Practical - Preprocessing Function.ipynb
@@ -19,11 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "24c7afea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = \"This is a test <3 :) ! 98424\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58613d8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#output: \"test <3 :) numbr\""
+   ]
   }
  ],
  "metadata": {
@@ -42,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
