--- a/Day1/2. Intro to Python.ipynb
+++ b/Day1/2. Intro to Python.ipynb
@@ -1274,7 +1274,9 @@
    "cell_type": "code",
    "execution_count": 97,
    "id": "2bc04a79",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -1499,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "id": "d8c6e74a",
    "metadata": {},
    "outputs": [],
@@ -1516,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "id": "edad3b2d",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1528,7 @@
        "[]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,22 +1539,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "id": "922ca7fc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2965380109.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_78210/2965380109.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    elif:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
    "source": [
     "#checking if specific words are present\n",
-    "if \"kjhliuh\" in text:\n",
+    "if \"dummy\" in text:\n",
     "    print(True)\n",
     "else:\n",
     "    print(True)\n",
